rEMOVE persistent properties